src/objects/NotificationMessageContent__mdt.object
<CustomObject>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotificationMessage__c</fullName>
        <label>Notification Message</label>
        <referenceTo>NotificationMessage__mdt</referenceTo>
        <relationshipLabel>Notification Message Contents</relationshipLabel>
        <relationshipName>NotificationMessageContents</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TextContent__c</fullName>
        <label>Text Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TextType__c</fullName>
        <label>Text Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Notification Message Content</label>
    <pluralLabel>Notification Message Contents</pluralLabel>
</CustomObject>